--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".providers.NoteProvider"
+            android:authorities="com.aitekteam.developer.playnote"
+            android:exported="false" />
     </application>
 
 </manifest>
