Functionality - Detail Note And Delete It

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.NoteControlActivity"
-            android:parentActivityName=".activities.MainActivity" >
+        <activity android:name=".activities.NoteDetailActivity"></activity>
+        <activity
+            android:name=".activities.NoteControlActivity"
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
@@ -18,9 +20,11 @@
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name=".providers.NoteProvider"
             android:authorities="com.aitekteam.developer.playnote"
